Change MAC type

--- a/lab5/wlan5.ini
+++ b/lab5/wlan5.ini
@@ -47,7 +47,7 @@ extends = WLAN-5-1
 # так как по умолчанию для WirelessNic используется Ieee80211.
 *.host*.wlan[0].radio.typename = "UnitDiskRadio"
 # Протокол MAC-уровня теперь CSMA
-*.host*.wlan[0].mac.typename = "CSMA"
+*.host*.wlan[0].mac.typename = "CsmaCaMac"
 # Отключен режим подтверждения (ASK) на уровне MAC
 *.host*.wlan[0].mac.useAck = false
 *.host*.wlan[0].queue.typename = "DropTailQueue"
