--- a/lab5/wlan5.ini
+++ b/lab5/wlan5.ini
@@ -50,7 +50,10 @@ extends = WLAN-5-1
 *.host*.wlan[0].mac.typename = "CsmaCaMac"
 # Отключен режим подтверждения (ASK) на уровне MAC
 *.host*.wlan[0].mac.useAck = false
+# модуль очереди 
 *.host*.wlan[0].queue.typename = "DropTailQueue"
+*.host*.wlan[0].queue.packetCapacity = -1 
+*.host*.wlan[0].mac.ackTimeout = 300us
 
 
 [Config WLAN-5-3]
