--- a/lab5/task/wlan5_1.ini
+++ b/lab5/task/wlan5_1.ini
@@ -9,7 +9,7 @@ sim-time-limit = 10s
 *.hostA.app[0].destAddresses = "hostB"
 *.hostA.app[0].destPort = 5000
 *.hostA.app[0].messageLength = 1000B
-*.hostA.app[0].sendInterval = exponential(10ms)
+*.hostA.app[0].sendInterval = exponential(1s)
 *.hostA.app[0].packetName = "myUDP"
 
 *.hostB.numApps = 1
