--- a/lab5/task/wlan_5_2.ini
+++ b/lab5/task/wlan_5_2.ini
@@ -3,7 +3,7 @@ network = Task_5_2
 sim-time-limit = 25s
 # Описание моделируемой площади и расположения узлов на ней
 # три стационарных узла, остальные расположены случайным образом
-*.host[2].mobility.typename = "LinearMobility"
+*.host*.mobility.typename = "LinearMobility"
 *.host[2].mobility.speed = 15mps
 
 *.host[2].mobility.initialMovementHeading = 270deg
