--- a/lab5/wlan5.ini
+++ b/lab5/wlan5.ini
@@ -24,12 +24,20 @@ sim-time-limit = 25s
 *.host*.wlan[0].radio.receiver.ignoreInterference = false
 *.host*.wlan[*].radio.transmitter.interferenceRange = 500m
 *.hostA.wlan[0].radio.displayInterferenceRange = true
+*.hostR*.wlan[0].radio.displayInterferenceRange = true
 
-*.host*.wlan[0].radio.displayCommunicationRange = true
+*.hostR*.wlan[0].radio.displayCommunicationRange = true
 
+
+*.visualizer.sceneVisualizer.descriptionFigure = "title"
 *.visualizer.mediumVisualizer.displaySignals = true
 *.visualizer.physicalLinkVisualizer.displayLinks = true
 *.visualizer.physicalLinkVisualizer.packetFilter = "UDPData*"
+*.visualizer.dataLinkVisualizer.displayLinks = true
+*.visualizer.networkRouteVisualizer.displayRoutes = true
+*.visualizer.*LinkVisualizer.lineShift = 0
+*.visualizer.networkRouteVisualizer.lineShift = 0
+*.visualizer.networkRouteVisualizer.packetFilter = "UDPData*"
 
 [Config WLAN-5-1]
 description = This is old simulation for lab4
@@ -60,4 +68,26 @@ extends = WLAN-5-1
 description = Use CSMA with ACK
 extends = WLAN-5-2
 *.host*.wlan[0].mac.useAck = true
+
+[Config WLAN-5-4]
+extends = WLAN-5-3
+description = Modeling energy consumption
+*.host*.wlan[0].radio.energyConsumer.typename = "StateBasedEpEnergyConsumer"
+*.host*.energyStorage.typename = "IdealEpEnergyStorage"
+
+[Config WLAN-5-5]
+extends = WLAN-5-4
+description = Configuring node movements
+*.hostR*.mobility.typename = "LinearMobility"
+*.hostR*.mobility.speed = 12mps
+*.hostR*.mobility.initialMovementHeading = 270deg
+*.visualizer.mobilityVisualizer.displayVelocities = true
+*.visualizer.mobilityVisualizer.displayMovementTrails = true
+
+[Config WLAN-5-6]
+description = Queue size is 10
+extends = WLAN-5-5
+*.host*.wlan[0].queue.packetCapacity = 10
+
+
 
