--- a/lab5/task/wlan5_1.ini
+++ b/lab5/task/wlan5_1.ini
@@ -44,4 +44,4 @@ sim-time-limit = 10s
 *.host*.wlan[0].queue.typename = "DropTailQueue"
 *.host*.wlan[0].queue.packetCapacity = -1
 *.host*.wlan[0].mac.useAck = true
-#*.host*.wlan[0].mac.mtu = 770
+*.host*.wlan[0].mac.mtu = 770
