--- a/lab6/wlan6.ini
+++ b/lab6/wlan6.ini
@@ -1,3 +1,82 @@
 [General]
-network = lab5.wlan5
-extends = lab5.WLAN-5-2
+network = wlan6
+sim-time-limit = 25s
+
+#приложения
+*.hostA.numApps = 1
+*.hostA.app[0].typename = "UdpBasicApp"
+*.hostA.app[0].destAddresses = "hostB"
+*.hostA.app[0].destPort = 5000
+*.hostA.app[0].messageLength = 1000B
+*.hostA.app[0].sendInterval = exponential(10ms)
+*.hostA.app[0].packetName = "myUDP"
+
+*.hostB.numApps = 1
+*.hostB.app[0].typename = "UdpSink"
+*.hostB.app[0].localPort = 5000
+
+#визуализатор
+#visual
+*.hostA.wlan[0].radio.displayCommunicationRange = true
+
+*.visualizer.sceneVisualizer.descriptionFigure = "title"
+
+*.visualizer.mediumVisualizer.displaySignals = true
+
+*.visualizer.physicalLinkVisualizer.displayLinks = true
+
+*.visualizer.dataLinkVisualizer.displayLinks = true
+*.visualizer.networkRouteVisualizer.displayRoutes = true
+*.visualizer.*LinkVisualizer.lineShift = 0
+*.visualizer.networkRouteVisualizer.lineShift = 0
+*.host*.wlan[0].radio.displayInterferenceRange = false
+*.hostR1.wlan[0].radio.displayCommunicationRange = false
+*.visualizer.mobilityVisualizer.displayVelocities = true
+*.visualizer.mobilityVisualizer.displayMovementTrails = true
+
+#роутинг
+*.hostR*.forwarding = true
+*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
+*.configurator.optimizeRoutes = false
+*.host*.ipv4.routingTable.netmaskRoutes = ""
+*.host*.ipv4.arp.typename = "GlobalArp"
+
+
+#медиум
+*.host*.wlan[0].radio.typename = "UnitDiskRadio"
+*.host*.wlan[0].radio.transmitter.communicationRange = 250m
+*.host*.wlan[0].radio.receiver.ignoreInterference = false
+*.host*.wlan[0].radio.transmitter.interferenceRange = 500m
+*.hostA.wlan[0].radio.displayInterferenceRange = true
+*.hostB.wlan[0].radio.displayInterferenceRange = true
+*.hostB.wlan[0].radio.displayCommunicationRange = true
+
+
+#nic
+*.host*.wlan[*].typename = "WirelessInterface"
+*.host*.wlan[0].mac.typename = "CsmaCaMac"
+*.host*.wlan[0].mac.useAck = true
+*.host*.wlan[0].queue.typename = "DropTailQueue"
+*.host*.wlan[0].queue.packetCapacity = 10 
+*.host*.wlan[0].mac.ackTimeout = 300us
+*.host*.**.bitrate = 1Mbps
+
+#энергомодель
+*.host*.wlan[0].radio.energyConsumer.typename = "StateBasedEpEnergyConsumer"
+*.host*.energyStorage.typename = "IdealEpEnergyStorage"
+
+#мобильность
+*.hostR*.mobility.typename = "LinearMobility"
+*.hostR*.mobility.speed = 12mps
+*.hostR*.mobility.initialMovementHeading = 270deg
+
+[Config WLAN-6-1]
+description = Configuring Ad Hoc routing (AODV)
+*.configurator.addStaticRoutes = false
+
+*.host*.typename = "AodvRouter"
+
+*.hostB.wlan[0].radio.displayCommunicationRange = true
+
+*.visualizer.dataLinkVisualizer.packetFilter = "AODV*"
+
