--- a/lab6/wlan6.ini
+++ b/lab6/wlan6.ini
@@ -80,3 +80,12 @@ description = Configuring Ad Hoc routing (AODV)
 
 *.visualizer.dataLinkVisualizer.packetFilter = "AODV*"
 
+[Config WLAN-6-2]
+description = Adding obstacles to the environment
+extends = WLAN-6-1
+network = wlan6_1 
+*.host*.mobility.initialZ = 2m
+*.physicalEnvironment.config = xmldoc("stena.xml")
+*.radioMedium.obstacleLoss.typename = "IdealObstacleLoss"
+
+
