--- a/lab7/nic/omnetpp.ini
+++ b/lab7/nic/omnetpp.ini
@@ -1,12 +1,12 @@
 [General]
 num-rngs = 3
 #abstract-config = true (requires omnet 7)
-sim-time-limit = 25s
+
 network = TestNic
 **.mobility.rng-0 = 1
 **.wlan[*].mac.rng-0 = 2
 
-*.numHosts = 5
+*.numHosts = 2
 
 **.host[0].numPcapRecorders = 1
 **.host[0].pcapRecorder[*].pcapFile = "results/pcapfile.pcap"
@@ -36,7 +36,7 @@ network = TestNic
 *.host[0].numApps = 0
 *.host[*].numApps = 1
 *.host[*].app[0].typename = "PingApp"
-*.host[3].app[*].destAddr = "host[0]"
+*.host[*].app[*].destAddr = "host[0]"
 *.host[*].app[*].printPing = true
 
 [Config AbstractAckingMac]
@@ -183,6 +183,7 @@ description = "Ieee802154Mac mac with unit disk radio"
 extends = AbstractCSMA, AbstractApskScalarRadio
 description = "Ieee802154Mac mac with scalar radio"
 *.host[*].wlan[*].radio.transmitter.bitrate = 2Mbps
+*.host*.wlan[*].mac.useAck = true
 
 [Config CSMAWithApskDimensionalRadio]
 extends = AbstractCSMA, AbstractApskDimensionalRadio
@@ -280,4 +281,12 @@ description = "IEEE 802.11 radios for V2X communication in 5.9 GHz band"
 **.wlan*.radio.bandwidth = 10 MHz
 **.wlan*.radio.centerFrequency = 5.9 GHz
 **.wlan*.radio.channelNumber = 4
+
+
+
+[Config IEEE802154]
+
+extends = AbstractApskScalarRadio
+*.host[*].wlan[*].typename = "Ieee802154NarrowbandInterface"
+*.host[*].wlan[*].radio.typename = "Ieee802154NarrowbandDimensionalRadio"
 
