--- a/nic/omnetpp.ini
+++ b/nic/omnetpp.ini
@@ -6,7 +6,7 @@ network = TestNic
 **.mobility.rng-0 = 1
 **.wlan[*].mac.rng-0 = 2
 
-*.numHosts = 5
+*.numHosts = 2
 
 **.host[0].numPcapRecorders = 1
 **.host[0].pcapRecorder[*].pcapFile = "results/pcapfile.pcap"
@@ -36,7 +36,7 @@ network = TestNic
 *.host[0].numApps = 0
 *.host[*].numApps = 1
 *.host[*].app[0].typename = "PingApp"
-*.host[3].app[*].destAddr = "host[0]"
+*.host[*].app[*].destAddr = "host[0]"
 *.host[*].app[*].printPing = true
 
 [Config AbstractAckingMac]
